--- a/css/style.css
+++ b/css/style.css
@@ -101,27 +101,27 @@ img {
   margin-right: 93px;
 }
 
-.body .logo-header {
+.page-header--logo {
   color: #000000;
 }
 
-.header-container {
+.page-header--position {
   display: flex;
   align-items: center;
 }
 
-.site-nav {
-  display: flex;
-  align-items: center;
-}
-
-.header-item:not(:last-child) {
+.header-nav__item:not(:last-child) {
   margin-right: 50px;
 }
 
 /* <!----------------------navigation section---------------------> */
 
-.header-link {
+.header-nav__list {
+  display: flex;
+  align-items: center;
+}
+
+.header-nav__link {
   position: relative;
 
   padding-bottom: 32px;
@@ -135,7 +135,7 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.current.header-link::after {
+.header-nav__link--current::after {
   position: absolute;
   bottom: -1px;
   left: 0;
@@ -149,12 +149,12 @@ img {
   border-radius: 2px;
 }
 
-.header-link:hover,
-.header-link:focus {
+.header-nav__link:hover,
+.header-nav__link:focus {
   color: var(--accent-color);
 }
 
-.header-link.current {
+.header-nav__link--current {
   color: var(--accent-color);
 }
 
@@ -166,7 +166,11 @@ img {
   align-items: center;
 }
 
-.contacts-link {
+.contacts-header__item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.contacts-header__link {
   display: flex;
   align-items: center;
 
@@ -179,23 +183,19 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contacts-icon {
+.contacts-header__link:hover,
+.contacts-header__link:focus {
+  color: var(--accent-color);
+}
+
+.contacts-header__icon {
   fill: currentColor;
   margin-right: 10px;
 }
 
-.contacts-item:not(:last-child) {
-  margin-right: 30px;
-}
-
-.contacts-link:hover,
-.contacts-link:focus {
-  color: var(--accent-color);
-}
-
 /* -----------------------Hero----------------------- */
 
-.hero-container {
+.hero__container {
   max-width: 1600px;
   height: 600px;
   margin: 0 auto;
@@ -209,7 +209,7 @@ img {
   background-size: cover;
 }
 
-.hero-title {
+.hero__title {
   width: 696px;
   margin: 0 auto;
 
@@ -224,7 +224,7 @@ img {
   margin-bottom: 30px;
 }
 
-.hero-button {
+.button {
   display: block;
   min-width: 200px;
   height: 50px;
@@ -246,8 +246,8 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hero-button:focus,
-.hero-button:hover {
+.button:focus,
+.button:hover {
   background-color: #188ce8;
 }
 
@@ -439,11 +439,11 @@ img {
   padding-bottom: 60px;
 }
 
-.footer-position {
+.footer--position {
   display: flex;
 }
 
-.footer .logo-footer {
+.footer--logo {
   color: var(--primary-white-color);
 }
 
@@ -451,11 +451,7 @@ img {
   padding-top: 20px;
 }
 
-.contacts .actual {
-  color: var(--primary-white-color);
-}
-
-.footer-address {
+.footer__link {
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -466,13 +462,17 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-item:not(:last-child) {
-  margin-bottom: 9px;
+.footer__link:hover,
+.footer__link:focus {
+  color: var(--primary-white-color);
 }
 
-.footer-address:hover,
-.footer-address:focus {
+.actual {
   color: var(--primary-white-color);
+}
+
+.footer__item:not(:last-child) {
+  margin-bottom: 9px;
 }
 
 .social {
@@ -574,7 +574,7 @@ img {
   justify-content: center;
   align-items: center;
 }
-.footer-button-icon {
+.footer-button__icon {
   display: flex;
   margin-left: 10px;
 }
@@ -602,15 +602,15 @@ img {
   justify-content: center;
 }
 
-.filters-item {
+.filters__item {
   display: flex;
 }
 
-.filters-item + .filters-item {
+.filters__item + .filters__item {
   margin-left: 8px;
 }
 
-.filters-button {
+.filters__button {
   padding: 6px 22px;
 
   background-color: #f5f4fa;
@@ -629,8 +629,8 @@ img {
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.filters-button:hover,
-.filters-button:focus {
+.filters__button:hover,
+.filters__button:focus {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
 
