--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,9 @@ ol {
   font-size: 26px;
   line-height: 1.19;
   text-decoration: none;
+}
+
+.logo--header {
   margin-right: 93px;
 }
 
@@ -57,5 +60,42 @@ ol {
 
 .header-nav__item:not(:last-child) {
   margin-right: 50px;
+}
+
+.header-nav__list {
+  display: flex;
+  align-items: center;
+}
+
+.header-nav__link {
+  position: relative;
+  padding-bottom: 32px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--title-text-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-nav__link--current::after {
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+  content: '';
+  display: block;
+  width: 100%;
+  height: 4px;
+  background: #2196f3;
+  border-radius: 2px;
+}
+
+.header-nav__link:hover,
+.header-nav__link:focus {
+  color: var(--accent-color);
+}
+
+.header-nav__link--current {
+  color: var(--accent-color);
 }
 /*# sourceMappingURL=main.css.map */
