--- a/css/main.css
+++ b/css/main.css
@@ -30,10 +30,25 @@ ol {
   text-decoration: none;
 }
 
+button {
+  cursor: pointer;
+}
+
+img {
+  display: block;
+  min-width: 100%;
+  width: 100%;
+}
+
 .page-header {
   border-bottom: 1px solid #ececec;
   padding-top: 24px;
   padding-bottom: 25px;
+}
+
+.page-header--position {
+  display: flex;
+  align-items: center;
 }
 
 .logo {
@@ -49,17 +64,8 @@ ol {
   margin-right: 93px;
 }
 
-.page-header--logo {
+.logo--dark {
   color: #000000;
-}
-
-.page-header--position {
-  display: flex;
-  align-items: center;
-}
-
-.header-nav__item:not(:last-child) {
-  margin-right: 50px;
 }
 
 .header-nav__list {
@@ -78,6 +84,10 @@ ol {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.header-nav__link--current {
+  color: var(--accent-color);
+}
+
 .header-nav__link--current::after {
   position: absolute;
   bottom: -1px;
@@ -90,12 +100,49 @@ ol {
   border-radius: 2px;
 }
 
-.header-nav__link:hover,
 .header-nav__link:focus {
   color: var(--accent-color);
 }
 
-.header-nav__link--current {
+.header-nav__link:hover {
   color: var(--accent-color);
+}
+
+.header-nav__item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.contacts-header {
+  display: flex;
+  margin-left: auto;
+  align-items: center;
+}
+
+.contacts-header__item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.contacts-header__link {
+  display: flex;
+  align-items: center;
+  color: var(--primary-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contacts-header__link:hover {
+  color: var(--accent-color);
+}
+
+.contacts-header__link:focus {
+  color: var(--accent-color);
+}
+
+.contacts-header__icon {
+  fill: currentColor;
+  margin-right: 10px;
 }
 /*# sourceMappingURL=main.css.map */
