--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -15,27 +15,34 @@
 
   color: var(--title-text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.header-nav__link--current::after {
-  position: absolute;
-  bottom: -1px;
-  left: 0;
-  content: '';
+  &--current {
+    color: var(--accent-color);
+  }
+  
+  &--current::after {
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    content: '';
+  
+    display: block;
+    width: 100%;
+    height: 4px;
+  
+    background: #2196f3;
+    border-radius: 2px;
+  }
 
-  display: block;
-  width: 100%;
-  height: 4px;
+  &:focus {
+    color: var(--accent-color);
+  }
 
-  background: #2196f3;
-  border-radius: 2px;
-}
-
-.header-nav__link:hover,
-.header-nav__link:focus {
+  &:hover {
   color: var(--accent-color);
+  }
 }
 
-.header-nav__link--current {
-  color: var(--accent-color);
+.header-nav__item:not(:last-child) {
+  margin-right: 50px;
 }
