--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -2,6 +2,11 @@
   border-bottom: 1px solid #ececec;
   padding-top: 24px;
   padding-bottom: 25px;
+
+  &--position {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .logo {
@@ -11,21 +16,13 @@
   font-size: 26px;
   line-height: 1.19;
   text-decoration: none;
+
+  &--header {  
+    margin-right: 93px;
+  }
+
+  &--dark {
+    color: #000000;
+  }
 }
 
-.logo--header {  
-  margin-right: 93px;
-}
-
-.page-header--logo {
-  color: #000000;
-}
-
-.page-header--position {
-  display: flex;
-  align-items: center;
-}
-
-.header-nav__item:not(:last-child) {
-  margin-right: 50px;
-}
