--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import "./utils/vars";
 @import "./utils/reset";
 @import "./components/page-header";
-@import "./components/navigation"
+@import "./components/navigation";
+@import "./components/contacts-header";
 
