--- a/sass/utils/_reset.scss
+++ b/sass/utils/_reset.scss
@@ -10,8 +10,8 @@ h6 {
 
 ul,
 ol {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 .list {
@@ -21,3 +21,13 @@ ol {
 .link {
     text-decoration: none;
 }
+
+button {
+    cursor: pointer;
+}
+
+img {
+    display: block;
+    min-width: 100%;
+    width: 100%;
+  }
