Исправляет ховер, фокус в хєдере в scss

--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -34,13 +34,10 @@
     border-radius: 2px;
   }
 
-  &:focus {
-    color: var(--accent-color);
-  }
-
+  &:focus,
   &:hover {
-  color: var(--accent-color);
-  }
+    color: var(--accent-color);
+  }  
 }
 
 .header-nav__item:not(:last-child) {
