--- a/css/main.css
+++ b/css/main.css
@@ -100,11 +100,7 @@ img {
   border-radius: 2px;
 }
 
-.header-nav__link:focus {
-  color: var(--accent-color);
-}
-
-.header-nav__link:hover {
+.header-nav__link:focus, .header-nav__link:hover {
   color: var(--accent-color);
 }
 
@@ -133,11 +129,7 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contacts-header__link:hover {
-  color: var(--accent-color);
-}
-
-.contacts-header__link:focus {
+.contacts-header__link:hover, .contacts-header__link:focus {
   color: var(--accent-color);
 }
 
