--- a/sass/components/_contacts-header.scss
+++ b/sass/components/_contacts-header.scss
@@ -19,9 +19,7 @@
   
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    &:hover {
-      color: var(--accent-color);
-    }
+    &:hover,
     &:focus {
       color: var(--accent-color);
     }
