--- a/css/main.css
+++ b/css/main.css
@@ -194,7 +194,6 @@ img {
   min-width: 200px;
   height: 50px;
   margin: 0 auto;
-  cursor: pointer;
   font-family: inherit;
   color: var(--primary-white-color);
   background-color: var(--accent-color);
@@ -366,7 +365,6 @@ img {
 
 .footer__link {
   font-style: normal;
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   color: rgba(255, 255, 255, 0.6);
@@ -548,7 +546,6 @@ img {
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
-  font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
@@ -658,14 +655,13 @@ textarea {
   background-color: #f5f4fa;
   border: none;
   border-radius: 4px;
-  cursor: pointer;
   font-family: inherit;
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
   text-align: center;
-  transition: color 2500ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .filters__button:hover, .filters__button:focus {
   color: var(--primary-white-color);
@@ -728,7 +724,7 @@ textarea {
   background-color: rgba(33, 150, 243, 0.9);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-desc.portfolio-item:hover .portfolio-desc {
+.portfolio-item:hover .portfolio-desc {
   transform: translateY(0);
 }
 
@@ -787,6 +783,6 @@ textarea {
   background-color: rgba(33, 150, 243, 0.9);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-desc.portfolio-item:hover .portfolio-desc {
+.portfolio-item:hover .portfolio-desc {
   transform: translateY(0);
 }/*# sourceMappingURL=main.css.map */
