--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -59,9 +59,8 @@
 
     background-color: rgba(33, 150, 243, 0.9);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    &.portfolio-item:hover & {
-        transform: translateY(0);
-    }
+    
+    .portfolio-item:hover & {
+    transform: translateY(0);
+  }
 }
-
