--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,13 @@ ol {
   margin: -1px;
 }
 
+.body {
+  background-color: var(--primary-white-color);
+  color: var(--primary-text-color);
+  font-family: Roboto, sans-serif;
+  letter-spacing: 0.03em;
+}
+
 button {
   cursor: pointer;
 }
@@ -454,7 +461,6 @@ img {
   margin-top: 20px;
   padding: 15px 16px;
   width: 358px;
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
@@ -670,11 +676,11 @@ textarea {
 }
 
 .portfolio .title {
-  color: var(--title-text-color);
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  color: var(--title-text-color);
 }
 
 .portfolio .subtitle {
@@ -716,66 +722,6 @@ textarea {
   width: 100%;
   height: 100%;
   transform: translateY(100%);
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.56;
-  color: var(--primary-white-color);
-  padding: 63px 24px;
-  background-color: rgba(33, 150, 243, 0.9);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.portfolio-item:hover .portfolio-desc {
-  transform: translateY(0);
-}
-
-.portfolio .title {
-  color: var(--title-text-color);
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-}
-
-.portfolio .subtitle {
-  font-size: 16px;
-  line-height: 1.87;
-}
-
-.portfolio {
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: -30px;
-}
-
-.portfolio-item {
-  flex-basis: calc(33.3333333333% - 30px);
-  margin-right: 30px;
-}
-.portfolio-item:hover, .portfolio-item:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-.portfolio-item:not(:nth-last-child(-n+3)) {
-  margin-bottom: 30px;
-}
-
-.portfolio-card {
-  padding: 20px 24px;
-  border: 1px solid #eeeeee;
-}
-
-.portfolio-thumb {
-  position: relative;
-  overflow: hidden;
-}
-
-.portfolio-desc {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  transform: translateY(100%);
-  font-weight: 400;
   font-size: 18px;
   line-height: 1.56;
   color: var(--primary-white-color);
