--- a/sass/utils/_common.scss
+++ b/sass/utils/_common.scss
@@ -1,3 +1,10 @@
+.body {
+    background-color: var(--primary-white-color);
+    color: var(--primary-text-color);
+    font-family: Roboto, sans-serif;
+    letter-spacing: 0.03em;
+}
+
 button {
     cursor: pointer;
 }
