--- a/css/main.css
+++ b/css/main.css
@@ -189,9 +189,9 @@ img {
   color: var(--primary-white-color);
   font-weight: 900;
   font-size: 44px;
-  line-height: 1.36;
-  text-align: center;
+  line-height: 1.31;
   letter-spacing: 0.06em;
+  text-align: center;
   text-transform: uppercase;
   margin-bottom: 30px;
 }
@@ -203,11 +203,11 @@ img {
   margin: 0 auto;
   font-family: inherit;
   color: var(--primary-white-color);
-  background-color: var(--accent-color);
   font-weight: 700;
   font-size: 16px;
-  line-height: 1.87;
+  line-height: 1.88;
   letter-spacing: 0.06em;
+  background-color: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: none;
@@ -221,7 +221,7 @@ img {
   padding-bottom: 0;
 }
 
-.features .title {
+.features-title {
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 14px;
@@ -371,9 +371,9 @@ img {
 }
 
 .footer__link {
+  font-size: 16px;
+  line-height: 1.62;
   font-style: normal;
-  font-size: 14px;
-  line-height: 1.71;
   color: rgba(255, 255, 255, 0.6);
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -394,7 +394,7 @@ img {
   padding-left: 70px;
 }
 
-.social__title {
+.footer__title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -450,11 +450,6 @@ img {
   display: flex;
   flex-direction: column;
   margin-right: 12px;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  text-transform: uppercase;
-  color: var(--primary-white-color);
 }
 
 .subscribe-form__input {
@@ -463,7 +458,6 @@ img {
   width: 358px;
   font-size: 16px;
   line-height: 1.25;
-  letter-spacing: 0.03em;
   background-color: transparent;
   color: rgba(255, 255, 255, 0.6);
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -571,7 +565,6 @@ img {
   text-align: center;
   font-size: 14px;
   line-height: 1.71;
-  letter-spacing: 0.03em;
 }
 
 .form-icon {
@@ -620,8 +613,8 @@ img {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-input::placeholder {
-  font-size: 14px;
-  line-height: 1.14;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
