--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -2,17 +2,14 @@
     padding-bottom: 0;
   }
   
-  .features .title {
+  .features-title {
     color: var(--title-text-color);
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
+    @include font(700, 14px, 1.14, null);
     text-transform: uppercase;
   }
   
   .features-desc {
-    font-size: 14px;
-    line-height: 1.71;
+    @include font(null, 14px, 1.71, null);
     padding-top: 10px;
   }
   
