--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,8 +1,5 @@
 .portfolio .title {
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
+    @include font(700, 18px, 2, 0.06em);
     color: var(--title-text-color);
 }
 
