--- a/sass/utils/_common.scss
+++ b/sass/utils/_common.scss
@@ -11,9 +11,9 @@ button {
 
 img {
     display: block;
-    min-width: 100%;
-    width: 100%;
-}
+    max-width: 100%;
+    height: auto;
+  }
 
 .container {
     width: 1200px;
